--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,51 @@
-<!doctype HTMl>
-<style>
-
-</style>
+<!DOCTYPE html>
 <html>
-	<head>
+  <head>
+    <title>The Drew - Discord Bot</title>
+    <style>
+      /* Add some basic styling for the page */
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 50px;
+        padding-left: 25%;
+        padding-right: 25%;
+        background-color: #333;
+        color: #fff;
+      }
+      h1 {
+        font-size: 3em;
+        margin-bottom: 20px;
+      }
+      a {
+        text-decoration: none;
+        color: #00bfff;
+      }
+      /* Add some styling for the buttons */
+      .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        margin: 10px;
+        border: none;
+        background-color: #00bfff;
+        color: #333;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Welcome to The Drew!</h1>
+    <p>The Drew is a powerful open-source Discord bot that can help you manage your server and keep your community engaged. With a wide range of features, including customizable commands, automated moderation, and detailed analytics, The Drew is the ultimate tool for server owners and administrators.</p>
+    <a href="http://127.0.0.1/newevent" class="btn">Create a new event</a><br><br><br>
 
-	</head>
-	<body>
-		<div class='content'>
-			<p>artism webserver</p>
-		</div>
-	</body>
+    
+    <a href="https://discordapp.com/api/oauth2/authorize?client_id=835740330111926312&permissions=8&scope=bot" class="btn">Invite The Drew</a>
+    <a href="https://github.com/wooshdude/neodrew" class="btn">Support and documentation</a>
+    <p>Copyright ©2022 The Drew. All rights reserved.</p>
+  </body>
 </html>
+
