--- a/templates/index.html
+++ b/templates/index.html
@@ -40,9 +40,7 @@
   <body>
     <h1>Welcome to The Drew!</h1>
     <p>The Drew is a powerful open-source Discord bot that can help you manage your server and keep your community engaged. With a wide range of features, including customizable commands, automated moderation, and detailed analytics, The Drew is the ultimate tool for server owners and administrators.</p>
-    <a href="http://127.0.0.1/newevent" class="btn">Create a new event</a><br><br><br>
-
-    
+    <a href="http://drew.artism.place/newevent" class="btn">Create a new event</a><br><br><br>
     <a href="https://discordapp.com/api/oauth2/authorize?client_id=835740330111926312&permissions=8&scope=bot" class="btn">Invite The Drew</a>
     <a href="https://github.com/wooshdude/neodrew" class="btn">Support and documentation</a>
     <p>Copyright ©2022 The Drew. All rights reserved.</p>
